test/files/neg/bug200.check
bug200.scala:7: error: method foo is defined twice
  def foo: Int;
      ^
one error found
